# AI_solo_coder_task_A_093

./: .dockerignore  README.md  build.bat  config.json  docker-compose.yml  start_backend.bat  start_frontend.bat  start_simulator.bat
backend/: CMakeLists.txt  Dockerfile  config.json
backend/include/: alarm_mqtt.h  alert_manager.h  clickhouse_client.h  column_simulation.h  common.h  config_loader.h  http_server.h  logger.h  message_queue.h  mqtt_client.h  prometheus_metrics.h  seismic_simulator.h  sensitivity_analysis.h  sensitivity_analyzer.h  udp_receiver.h  udp_server.h
backend/src/: alarm_mqtt.cpp  alert_manager.cpp  clickhouse_client.cpp  column_simulation.cpp  config_loader.cpp  http_server.cpp  logger.cpp  main.cpp  mqtt_client.cpp  prometheus_metrics.cpp  seismic_simulator.cpp  sensitivity_analysis.cpp  sensitivity_analyzer.cpp  udp_receiver.cpp  udp_server.cpp
database/: init.sql  retention_and_downsampling.sql
deploy/grafana/provisioning/datasources/: datasources.yml
deploy/mosquitto/: mosquitto.conf  passwd
deploy/prometheus/: prometheus.yml
frontend/: Dockerfile  index.html  nginx.conf  server.js
frontend/css/: style.css
frontend/js/: api.js  main.js  seismograph3d.js  seismoscope_3d.js  sensitivity_panel.js  waveform.js
simulator/: seismograph_simulator.py
tests/: regression_test.py
